# gas-packer

./: .gitmodules  CMakeLists.txt  README.md  setup.py
data/: multiple_atoms.csv  single_atom.csv
src/: GBConfig.cpp  GBConfig.h  GasAtom.cpp  GasAtom.h  GasBox.cpp  GasBox.h  LJPotential.cpp  LJPotential.h  Metropolis.cpp  Metropolis.h  anim.py  bindings.cpp  gb_utils.cpp  gb_utils.h  main.cpp
